examples/type_system/failing/154_unresolved_projection_strict_e425.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let value: Int = mystery.0
}
